@@ -125,7 +125,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> auto-sort </td><td class="wiki"> Automatically sort whilst loading data </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> sort-column </td><td class="wiki"> The initial sort column when auto-sorting </td><td class="wiki"> An integer &gt;= <code>0</code> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> sort-function </td><td class="wiki"> The algorithm to use when sorting </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (ASCII, strnatcmp, strcasenatcmp) </td><td class="wiki"> 0.8.1 </td></tr>
-
+<tr><td class="wiki"> column-header-active </td><td class="wiki"> Active state of column header(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> column-visible </td><td class="wiki"> Visible state of column(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Directives </h2>
@@ -146,7 +147,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Execute command on signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Perform function on signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> action type="<i>function</i>" </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> output file </td><td class="wiki"> Data output target </td><td class="wiki"> Filename </td><td class="wiki"> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
