@@ -153,9 +153,9 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 <tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Execute command on signal </td><td class="wiki"> Shell command </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> action signal="<i>type</i>" </td><td class="wiki"> Perform function on signal </td><td class="wiki"> <i>function</i>:<i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> action type="<i>function</i>" </td><td class="wiki"> Perform function on default signal </td><td class="wiki"> <i>parameter</i> </td><td class="wiki"> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> item icon-name="<i>image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> item stock-id="<i>gtk-image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>column0data</i> <code>|</code> <i>column1data</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> item </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i> <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> item icon-name="<i>image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> item stock-id="<i>gtk-image</i>" </td><td class="wiki"> Input data </td><td class="wiki"> <i>data0</i> <code>|</code> <i>data1</i>  <code>|</code> ... </td><td class="wiki"> </td><td class="wiki"> </td></tr>
 </table>
 
 <h2> Signals </h2>
@@ -241,7 +241,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkTreeView.html">GtkTreeView</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-08-29 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-04 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
